# fsearch

./: Cargo.toml
docs/: README.md
src/: main.rs
