[package]
name = "fsearch"
version = "0.1.0"
description = "Search keyword in a file"
authors = ["magicisyou"]
repository = "https://github.com/silentdusk/fsearch"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.1.0"
